Spark 1.5 support
The Sparkling Water 1.5 release is based on 1.4 release and
does not contain any major changes from master.

The change includes:
 - bump version of Spark dependency to 1.5.0
 - change type of H2OSchemaRDD from RDD[Row] to RDD[InternalRow]
   - implement corresponding changes in data transformation (from H2O to
     DataFrame)
 - prepare branch for releasing

Thanks to @hvanhovell who provided PR-18
(https://github.com/h2oai/sparkling-water/pull/18).